:bug: Overflow Fixed

--- a/css/nav-style.css
+++ b/css/nav-style.css
@@ -9,7 +9,7 @@ nav {
   z-index: 1000;
   width: 100%;
   padding: 10px;
-  display: inline-block;
+  display: none;
   -webkit-box-shadow: 0px 2px 92px 0px rgba(0, 0, 0, 0.18);
   -moz-box-shadow: 0px 2px 92px 0px rgba(0, 0, 0, 0.18);
   box-shadow: 0px 2px 32px 0px rgba(0, 0, 0, 0.25);
